--- a/package.json
+++ b/package.json
@@ -25,16 +25,21 @@
     "migration:revert": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.6",
-    "@nestjs/typeorm": "^10.0.0", 
+    "@nestjs/typeorm": "^10.0.0",
+    "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
     "cross-var": "^1.1.0",
     "dotenv": "^16.3.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
