--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.0",
     "cross-var": "^1.1.0",
     "dotenv": "^16.3.1",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.2",
