--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/swagger": "^7.1.6",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-var": "^1.1.0",
     "dotenv": "^16.3.1",
