--- a/.env
+++ b/.env
@@ -3,3 +3,16 @@ APP_MODE=DEV
 
 #JWT
 JWT_SECRET=225uwjHaDWnMYaVRBYj8unmh2pKuwnAO
+
+#MIGRATION
+# npm run migration:create  --name=create_table_name
+# npm run migration:generate  --name=create_table_name
+# npm run migration:run
+
+#DATABASE
+  type: 'postgres',
+  host: 'localhost',
+  port: 5433,
+  username: 'postgres',
+  password: 'postgres',
+  database: 'pointofsaledb',
